<resources>
    <string name="app_name">Brasov</string>
    <string name="name">Name</string>
    <string name="proffesion">Proffesion</string>
    <string name="description">Description</string>
    <string name="close">Close</string>
    <string name="image">location Image</string>
    <string name="hotel_name">Hotel Name</string>
    <string name="stars">Number of stars</string>
    <string name="hotel_adress">Hotel Adress</string>
    <string name="closeHotel">Close</string>
    <string name="food">Food</string>
    <string name="hotels">Hotels</string>
    <string name="brasov">Brasov</string>
    <string name="best_city">Probably the best city in the world</string>
    <string name="hotelsButton">Hotels</string>
    <string name="placesButton">Places</string>
    <string name="foodButton">Food</string>
    <string name="people_to_meet">People to meet</string>
    <string name="see_all_button">See all</string>
    <string name="celebrities">Celebrities</string>
    <string name="places">Places</string>
    <string name="brasovStr">BRASOV</string>
    <string name="best_city_str">Probably the best city in the world</string>
    <string name="read_more">Read More...</string>
    <string name="it_programmer">IT Programmer</string>
    <string name="nameStr">Name 1 Name 2</string>
    <string name="Adress">Hotel Adress</string>
    <string name="hotel_alpin">Hotel Alpin</string>
    <string name="bistro_aha">Bistro Aha</string>
    <string name="Bar_description">Phone: 07XX XXX XXX \n\nAdresa: Adress Line 1, Brașov\n\nFood description 1\n\nFeatures: DriveIn , TakeAway , Delivery\n\nTime schedule\nLuni/Vineri : 12:00  24:00\nSambata : 08:00  24:00\nDuminica : 10:00  24:00\n\n Final description</string>
    <string name="azima">Azima</string>
    <string name="belvedere">Belvedere</string>
    <string name="braserie">Braserie</string>
    <string name="casa_h">Casa Hirscher</string>
    <string name="casa_dodo">Casa Dodo</string>
    <string name="la_ceaun">La Ceaun</string>
    <string name="prato">Prato</string>
    <string name="s_house">Steak House</string>
    <string name="tratoria">Tratoria</string>
    <string name="casa_tudor">Casa Tudor</string>
    <string name="sergiana">Sergiana</string>
    <string name="bistro_l">Bistro &amp; Lounge</string>
    <string name="fastfood">Fast Food</string>
    <string name="restaurant">Restaurant</string>
    <string name="mock_person">Name1 Name2</string>
    <string name="mock_proffeson">Proffesion</string>
    <string name="mock_readMore">"Telefon : 0721 XXX XXX \n\nLocul Nasterii: Brasov\n\nData Nasterii: Data\n\nStudii: Studii\n\nCompanie : Loc de munca\n\nCitat preferat: carpe d;em\n\nRelatie :  \n\nComportament: temperament"</string>
    <string name="hotel_aro">Hotel Aro Palace</string>
    <string name="hotel_belvedere">Hotel Belvedere</string>
    <string name="hotel_ramada">Hotel Ramada</string>
    <string name="hotel_Kronwell">Hotel Kronwell</string>
    <string name="hotel_Wolkendorf">Hotel Wolkendorf</string>
    <string name="hotel_Ambient">Hotel Ambient</string>
    <string name="hotel_Rainer">Hotel Rainer</string>
    <string name="hotel_Wanger">Hotel Wanger</string>
    <string name="hotel_Lux_Divina">Hotel Lux Divina</string>
    <string name="hotel_description">"Adress Line 1 \nPhone: +40 XXX XXX XXX \n\n\nMOST POPULAR FACILITIES\nParking\nWifi\nRestaurant\nBar\nSpa\nPets\n\n\nABOUT\nDescription field "</string>
    <string name="concil_square">Piata sfatului</string>
    <string name="concil_square_descriprion">This is the heart of the city.\n\nPentru multi dintre cei care ajung in Brasov, aventura incepe din Piata Sfatului. Acest obiectiv turistic era in trecut locul in care se organizau targuri la care participau negustori din toate regiunile apropiate. De o importanta deosebita in perioada Evului Mediu, Piata Sfatului din Brasov este si astazi imprejmuita de zidurile cetatii ce au existat odinioara. De jur imprejur, cladirile impunatoare ce au influente germanice in arhitectura, pazesc astazi locul si ii dau o culoare autentica.</string>
    <string name="pietre_solomon">Pietrele lui Solomon</string>
    <string name="pietre_solomon_description">Great historical storyes and legends\n\nCât de diferită ar fi viaţa în Braşov dacă nu ar exista Pietrele lui Solomon! Probabil că rutina ta zilnică nu s-ar schimba prea mult, dar acele evadări de weekend… unde te-ar duce? Scepticii ar răspunde că în altă parte, ceea ce este adevărat. Însă, în Munţii Şchei te aşteaptă o comoară care, dacă nu ar fi existat, poate că s-ar fi inventat.\nOaza de linişte din interiorul munţilor parcă te poartă într-o poveste dacică cu un iz de sălbăticie este uşor de accesat pentru orice braşovean „din tată-n fiu”.\nTot la Pietrele lui Solomon găseşti un perete special amenajat pentru escaladare. Bineînţeles, zona face parte şi dintr-un ansamblu de trasee montane care fac deliciul turiştilor.</string>
    <string name="turnuri">Turnul Alb si Turnul Negru</string>
    <string name="turnuri_description">Watch over old Brasov from the Warthe hill\n\nConstruit între anii 1460 și 1494, Turnul Alb impresionează și astăzi prin masivitatea și zveltețea liniilor sale arhitectonice. Rezumând arhitectura sa în date putem spune: plan semicircular deschis; peste 30 m diferență de nivel față de zidurile orașului; înălțime: 20 m spre oraș și 18 m înspre deal; zidurile au la bază 4 m, iar diametrul turnului măsoară 19 m. Turnul Negru este unul dintre cele patru turnuri de observație ale Cetății Brașovului construit ca o fortificație independentă amplasată în afara zidurilor cetății, înaltă de peste 11 metri.</string>
    <string name="tampa">Tampa Brasov</string>
    <string name="tampa_description">Amazing hike\n\nFie cu telecabina sau pe un traseu turistic, nicio vizită în Brașov nu e completă fără o urcare pe Tâmpa.\nMuntele Tampa vegheaza falnic asupra vailor care astazi gazduiesc orasul Brasov. Tampa este unul dintre simbolurile orasului, muntele fiind pozitionat chiar in centrul lui. Aici se afla si cel mai inalt punct din oras, la aproximativ 960 m. De aici, privelistea este superba, avand o vedere asupra celor mai importante repere din Brasov.\nÎn vârful muntelui Tâmpa se poate ajunge pe mai multe căi: există cele 25 de serpentine, tăiate în 1837 de către Ocolul silvic al Brașovului, treptele lui Gabony, drumul Cavalerilor, vechi din vremea Cetății Brașovia sau drumul pentru mașină de „la iepure”. Cele patru trasee turistice au grade diferite de dificultate diferite, oferind variante de urcare pe Tâmpa atât pentru începători cât și pentru profesioniști.\n</string>
    <string name="zoo">Zoo Brasov</string>
    <string name="zoo_description">Great place to visit and see the wild life\n\nSituată în partea de sud-est a Braşovului, în cartierul Noua, Grădina Zoologică Braşov este amplasată în mijlocul pădurii, într-un loc liniştit, ideal pentru bunăstarea animalelor şi pentru relaxarea vizitatorilor\nCunoscută iniţial sub denumirea de Colţ Zoologic, instituţia a fost înfiinţată în anul 1960. În anul 1992 a devenit, sub autoritatea Consiliului Local al Municipiului Braşov, Grădina Zoologică Braşov.</string>
    <string name="imprejurimi">Imprejurimi</string>
    <string name="imprejurimi_description">Best places near Brasov\n\nBrașov este destinația de vacanță preferată de mii de turiști anual datorită obiectivelor turistice pe care orașul si imprejurarile le pun la dispoziție. Este, fără îndoială, unul dintre cele mai frumoase orașe din România, iar mai jos îți spunem ce poți să vizitezi in judetul Brasov\n- Castelul Bran\n- Cetatea Medievala Rupea\n- Cetatea Rasnov\n- Satul Viscri\n- Poiana Brasov\n- Multe alte locuri</string>
    <string name="black_church">Biserica neagra</string>
    <string name="black_church_description">15th-century Gothic churc \n\nBiserica Neagră, unul dintre simbolurile oraşului Braşov, este biserica parohială a Bisericii Evanghelice C.A. din România. Numele actual l-a primit după ce, în 1689, incendiul care a cuprins tot oraşul a tranformat-o într-o ruină. Iniţial ea purtase hramul Sfintei Maria. După Reformă a fost cunoscută ca "Biserica Mare", însă denumirea populară de după incendiu Biserica Neagră, a fost acceptată oficial în secolul al XIX-lea.\n\nCu excepţia Turciei, Biserica Neagră posedă cea mai mare colecţie de covoare orientale din Europa, datând din secolele XV-XVI. În turnul Bisericii Negre se află cel mai mare clopot mobil din România, cu o greutate de cca. 6.000 kg.</string>
    <string name="first_romanian_scholl">Prima schoala romaneasca</string>
    <string name="first_romanian_scholl_description">An extraordinary culture lesson\n\nPrima Școală Românească se află în Ardeal, în curtea bisericii Sfântul Nicolae din Șcheii Brașovului. Primele cursuri în limba română au avut loc pe băncile acestei școli, în anul 1583.\nAcesta este locul în care s-au ținut primele cursuri de limba română, în 1583, iar diaconul Coresi și-a putut tipări primele cărți în limba română, în Transilvania. Actuala clădire datează din anul 1760, fiind declarată monument istoric, alături de întreg ansamblul arhitectural.</string>
    <string name="rope_Street">Strada Sforii</string>
    <string name="rope_Street_description">One of the narrowest streets in Europe\n\nStrăduța îngustă între străzile Cerbului și Poarta Șchei a cărei existență este atestată în documentele din secolul XVII a fost un simplu coridor, pentru a ajuta munca pompierilor. Astăzi este o curiozitate a orașului. Cei mai curajoși afirmă că este cea mai îngustă stradă din Europa. Cert este ca lătimea ce variază între 111 și 135 cm îi conferă titlul de cea mai îngustă stradă a orașului. Străduța de 80 de metrii este parcurs de toți turiștii care ajung în oraș, este locul de întâlnire a îndrăgostiților și nu în ultimul rând, o temă provocatoare pentru fotografi.</string>
    <string name="brasov_cetate">Ceteatea Brasovului</string>
    <string name="brasov_cetate_description">Great medival arhitecture\n\nCetatea are forma de patrulater, cu bastioane italienesti in colturi care propteau deasupra turnurile de aparare. Cetatea a avut ca si cale de acces o singura intrare care se facea printr-un pod mobil. Cetatuia a slujit drept adapost pentru brasovenii nevoiti sa fuga din calea habsburgilor. Nesansa face ca garnizoanele habsburgice sa ocupe cetatea, si, astfel instalati, au asuprit vreme indelungata orasul.\nAici amintim activitatea de defrisare a viilor din jur. In anul 1773, imparatul habsburg Iosif al II-lea, ordona refacerea cetatii, forma refacuta atunci fiind cea pastrata pana in zilele de azi.</string>


</resources>