<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view_square_detailes2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        card_view:cardBackgroundColor="#FFFFFF"
        android:layout_marginBottom="8dp">
        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/list_item_square"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:orientation="vertical"
                tools:ignore="UselessParent">
                <ImageView
                    android:id="@+id/imageView__detailes2"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/alpin_main"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/image" />
                <TextView
                    android:id="@+id/name_detailes2"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/hotel_name"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"
                    android:background="#99141414"/>
                <ImageView
                    android:id="@+id/stars"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_width="100dp"
                    android:layout_height="30dp"
                    android:src="@drawable/stars_for_png"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:contentDescription="@string/stars"
                    android:layout_alignParentEnd="true" />
            </RelativeLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <LinearLayout
android:layout_below="@id/card_view_square_detailes2"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/content_detailes2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hotel_adress" />
        <Button
            android:id="@+id/button_close_d2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:text="@string/closeHotel" />
    </LinearLayout>
</RelativeLayout>