<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:ignore="UselessParent">
        <androidx.cardview.widget.CardView
            android:id="@+id/banner_main"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:cardCornerRadius="10dp"
            android:layout_gravity="center"
            app:cardElevation="5dp"
            android:layout_margin="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/app_top1">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brasov"
                    android:textSize="36sp"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    tools:ignore="RtlSymmetry" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/best_city"
                    android:paddingLeft="16dp"
                    android:paddingStart="16dp"
                    tools:ignore="RtlSymmetry" />
                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal">
                    <Button
                        android:id="@+id/btnBackward"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/baseline_fast_rewind_black_24dp"
                        android:layout_marginTop="16dp"/>
                    <Button
                        android:layout_toRightOf="@id/btnBackward"
                        android:id="@+id/play_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/baseline_play_arrow_black_24dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_toEndOf="@id/btnBackward"
                        android:layout_marginStart="16dp" />
                    <Button
                        android:layout_toRightOf="@id/play_button"
                        android:id="@+id/btnForward"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:background="@drawable/baseline_fast_forward_black_24dp"
                        android:layout_marginLeft="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_toEndOf="@id/play_button"
                        android:layout_marginStart="16dp" />
                </RelativeLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <LinearLayout
            android:id="@+id/menu_bar_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@+id/banner_main"
            android:background="@android:color/white"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp">

            <Button
                android:id="@+id/hotels_main"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/MenuStyle"
                android:text="@string/hotelsButton"
                android:onClick="openHotelsList"
                android:background="@android:color/white" />
            <Button
                android:id="@+id/places_main"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/MenuStyle"
                android:text="@string/placesButton"
                android:onClick="openPlacesList"
                android:background="@android:color/white" />

            <Button
                android:id="@+id/food_main"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                style="@style/MenuStyle"
                android:text="@string/foodButton"
                android:onClick="openFoodList"
                android:background="@android:color/white" />
        </LinearLayout>
        <RelativeLayout
            android:id="@+id/category_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/people_meet"
            android:layout_marginLeft="8dp"
            android:layout_below="@+id/menu_bar_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people_to_meet"
            android:textStyle="bold"
            android:layout_marginStart="8dp" />
        <TextView
            android:id="@+id/see_all_one"
            android:layout_marginRight="8dp"
            android:layout_below="@+id/menu_bar_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:layout_alignParentRight="true"
            android:text="@string/see_all_button"
            android:textStyle="bold"
            android:onClick="openPeopleList"
            android:layout_marginEnd="8dp"
            android:layout_alignParentEnd="true" />
        <ListView
            android:layout_below="@id/people_meet"
            android:id="@+id/list_round"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"/>

    </RelativeLayout>
</LinearLayout>
