<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:background="@android:color/white"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:layout_marginTop="32dp">
    <androidx.cardview.widget.CardView
        android:layout_margin="5dp"
        android:id="@+id/card_view_round_one"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:cardCornerRadius="200dp"
        android:layout_gravity="center"
        app:cardElevation="3dp"
        card_view:cardBackgroundColor="#FFFFFF">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_below="@+id/card_view_image_round"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/image_view_round_card"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/placeholder_person" />
        <LinearLayout
            android:id="@+id/text_container"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@id/image_view_round_card"
            android:orientation="vertical"
            android:layout_toEndOf="@id/image_view_round_card">
            <TextView
                android:id="@+id/name_round"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/nameStr"
                android:gravity="bottom|center_horizontal"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/proffesion_round"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/it_programmer"
                android:textStyle="bold"
                android:gravity="bottom|center_horizontal"
                android:textSize="14sp" />
            <TextView
                android:id="@+id/read_round"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/read_more"
                android:layout_marginBottom="8dp"
                android:gravity="bottom|center_horizontal"
                android:textSize="12sp"
                android:textStyle="italic"
                android:maxLines="1"
                android:ellipsize="end"/>
        </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>